# libcosim

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  Dockerfile.build  Dockerfile.conan-build  Jenkinsfile  LICENCE.txt  LICENSE  README.md  a.html  conanfile.py  conanfile.txt  style-configuration-clion.xml
.dockerfiles/: Dockerfile.build  Dockerfile.conan-build  sources-18.04-azure.list
clion_build/: CMakeCache.txt  CMakeDoxyfile.in  CMakeDoxygenDefaults.cmake  CTestTestfile.cmake  Doxyfile.doc  Makefile  cmake_install.cmake  conan_imports_manifest.txt  conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt  csecore-config.cmake  csecore.cbp
cmake/: AddTestExecutable.cmake  (+19 more)
src/: CMakeLists.txt
src/c/: CMakeLists.txt  cse.cpp  slave_logger.cpp  slave_logger.hpp  slave_observer.cpp  slave_observer.hpp  timer.cpp  timer.hpp
src/cosim/: async_slave.cpp  error.cpp  error.hpp  exception.cpp  execution.cpp  execution_runner.cpp  file_cache.cpp  lib_info.cpp.in  model.cpp  model_description.cpp  orchestration.cpp  osp_config_parser.cpp  scenario_parser.cpp  serialization.cpp  slave_simulator.cpp  slave_simulator.hpp  system_structure.cpp  timer.cpp  uri.cpp
src/cosim/algorithm/: ecco_algorithm.cpp  fixed_step_algorithm.cpp
src/cosim/fmi/: fmilib.h  glue.cpp  glue.hpp  importer.cpp  windows.cpp  windows.hpp
src/cosim/fmi/v1/: fmu.cpp
src/cosim/fmi/v2/: fmu.cpp
src/cosim/fmuproxy/: fmu_service.cpp  fmu_service.hpp  fmuproxy_client.cpp  fmuproxy_client.hpp  fmuproxy_helper.hpp  fmuproxy_uri_sub_resolver.cpp  fmuproxy_uri_sub_resolver.hpp  remote_fmu.cpp  remote_fmu.hpp  remote_slave.cpp  remote_slave.hpp  service.thrift  service_types.cpp  thrift_state.cpp  thrift_state.hpp
src/cosim/function/: linear_transformation.cpp  utility.cpp  vector_sum.cpp
src/cosim/log/: logger.cpp
src/cosim/manipulator/: override_manipulator.cpp  scenario_manager.cpp
src/cosim/observer/: file_observer.cpp  last_value_observer.cpp  slave_value_provider.cpp  slave_value_provider.hpp  time_series_observer.cpp
src/cosim/proxy/: proxy_file_uri_sub_resolver.cpp  proxy_file_uri_sub_resolver.hpp  proxy_uri_sub_resolver.cpp  proxy_uri_sub_resolver.hpp  remote_fmu.cpp  remote_fmu.hpp  remote_slave.cpp  remote_slave.hpp
src/cosim/ssp/: ssp_loader.cpp  ssp_parser.cpp  ssp_parser.hpp
src/cosim/utility/: concurrency.cpp  concurrency.hpp  filesystem.cpp  filesystem.hpp  thread_pool.hpp  utility.hpp  uuid.cpp  uuid.hpp  zip.cpp  zip.hpp
src/cpp/: CMakeLists.txt  algorithm.cpp  async_slave.cpp  config_loader.cpp  connection.cpp  cse_config_loader.cpp  cse_config_parser.cpp  cse_xsd_embedder.cpp  error.cpp  event_loop.cpp  exception.cpp  execution.cpp  file_cache.cpp  file_observer.cpp  fixed_step_timer.cpp  fmi_glue.cpp  fmi_importer.cpp  fmi_v1_fmu.cpp  fmi_v2_fmu.cpp  fmi_windows.cpp  general_timer.cpp  hello_world.cpp  libevent.cpp  log.cpp  master_algorithm.cpp  membuffer_observer.cpp  model.cpp  multi_fixed_step_algorithm.cpp  orchestration.cpp  override_manipulator.cpp  playground.cpp  scenario_manager.cpp  scenario_parser.cpp  slave_simulator.cpp  slave_value_provider.cpp  ssp_loader.cpp  ssp_parser.cpp  system_structure.cpp  time_series_observer.cpp  timer.cpp  (+4 more)
src/cpp/algorithm/: fixed_step_algorithm.cpp
src/cpp/connection/: gain_connection.cpp  linear_transformation_connection.cpp  scalar_connection.cpp  sum_connection.cpp
src/cpp/cse/: error.hpp  slave_simulator.hpp  slave_value_provider.hpp
src/cpp/cse/fmi/: fmilib.h  glue.hpp  windows.hpp
src/cpp/cse/fmuproxy/: fmu_service.hpp  fmuproxy_helper.hpp  remote_slave.hpp  service_types.hpp
src/cpp/cse/log/: logger.hpp
src/cpp/cse/observer/: slave_value_provider.hpp
src/cpp/cse/ssp/: ssp_parser.hpp
src/cpp/cse/utility/: concurrency.hpp  filesystem.hpp  simulation.hpp  utility.hpp  uuid.hpp  zip.hpp
src/cpp/dcp/: dcp_slave.cpp
src/cpp/fmi/: glue.cpp  importer.cpp  windows.cpp
src/cpp/fmi/v1/: fmu.cpp
src/cpp/fmi/v2/: fmu.cpp
src/cpp/fmuproxy/: client.cpp  fmu_service.cpp  fmuproxy_client.cpp  fmuproxy_sub_resolver.cpp  fmuproxy_uri_sub_resolver.cpp  remote_fmu.cpp  remote_slave.cpp  service_types.cpp  thrift_state.cpp  uri_resolver.cpp
src/cpp/function/: linear_transformation.cpp  utility.cpp  vector_sum.cpp
src/cpp/log/: logger.cpp
src/cpp/manipulator/: override_manipulator.cpp  scenario_manager.cpp
src/cpp/modifier/: gain_modifier.cpp
src/cpp/observer/: configurable_log_observer.cpp  file_observer.cpp  last_value_observer.cpp  membuffer_observer.cpp  slave_value_provider.cpp  time_series_observer.cpp
src/cpp/ssp/: ssp_loader.cpp  ssp_parser.cpp
src/cpp/utility/: concurrency.cpp  filesystem.cpp  zip.cpp
src/cpp/xsd/: OspSystemStructure.xsd
src/cse/: async_slave.cpp  cse_config_parser.cpp  error.cpp  error.hpp  exception.cpp  execution.cpp  file_cache.cpp  model.cpp  orchestration.cpp  osp_config_parser.cpp  scenario_parser.cpp  slave_simulator.cpp  slave_simulator.hpp  system_structure.cpp  timer.cpp  uri.cpp
src/cse/algorithm/: fixed_step_algorithm.cpp
src/cse/fmi/: glue.cpp  glue.hpp  importer.cpp  windows.cpp
src/cse/fmi/v1/: fmu.cpp
src/cse/fmi/v2/: fmu.cpp
src/cse/fmuproxy/: fmuproxy_client.cpp  fmuproxy_helper.hpp  fmuproxy_uri_sub_resolver.cpp  remote_fmu.cpp  remote_slave.cpp  remote_slave.hpp  service_types.cpp  thrift_state.cpp
src/cse/function/: linear_transformation.cpp  utility.cpp  vector_sum.cpp
src/cse/log/: logger.cpp
src/cse/manipulator/: override_manipulator.cpp  scenario_manager.cpp
src/cse/observer/: file_observer.cpp  last_value_observer.cpp  slave_value_provider.cpp  slave_value_provider.hpp  time_series_observer.cpp
src/cse/ssp/: ssp_loader.cpp  ssp_parser.cpp  ssp_parser.hpp
src/cse/utility/: concurrency.cpp  concurrency.hpp  filesystem.cpp  filesystem.hpp  utility.hpp  uuid.cpp  uuid.hpp  zip.cpp  zip.hpp
src/pdu-generator/: CMakeLists.txt  pdu_generator.cpp  pdus.json  pdus.yaml
tools/cse_xsd_embedder/: CMakeLists.txt  cse_xsd_embedder.cpp
(+387 files in other folders)
